--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
+:root{
+  --imgsize: min(30vw, 45vh);
+}
+body{
+  background-color: #1d9ba9;
   text-align: center;
+  padding-bottom: 5vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.top{
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+}
+h1{
+  flex: 10;
+  color:white;
+  font-weight: 800;
+  font-size: 4rem;
+}
+h3{
+  color:white;
+  font-size: 0.9rem;
+  font-weight: 100;
+}
+.close{
+  flex: 1;
+  font-size: 3rem;
+  font-weight: 100;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.row{
+  padding-left: 14vw;
+  padding-right: 14vw;
+  width:70vw;
+  height: 45vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 50px;
+}
+img{
+  border: 1px white solid;
+}
+#circ{
+  border-radius: 50%;
+  height: var(--imgsize);
+  width: var(--imgsize);
+}
+#rect{
+  height: calc(var(--imgsize)*0.7);
+  width: var(--imgsize);
+}
+#squa{
+  height: var(--imgsize);
+  width: var(--imgsize);
+}
+#tria{
+  clip-path: polygon(52% 31px, -1% 107%, 100% 100%);
+  height: var(--imgsize);
+  width: var(--imgsize);
+}
+#bigimg{
+  width: 70vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Media Queries */
+@media (max-width: 480px) {
+  .row{
+    flex-direction: column;
+    height: 80vh;
   }
-  to {
-    transform: rotate(360deg);
+  .top{
+    display: block;
+  }
+  :root{
+    --imgsize: min(90vw, 80vh);
   }
 }
